--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@ $Alhares-theme: mat.define-light-theme((
     accent: $Alhares-accent,
     warn: $Alhares-warn,
   )
-// ));
+));
 
 // // Include theme styles for core and each component used in your app.
 // // Alternatively, you can import and @include the theme mixins for each component
